--- a/about.html
+++ b/about.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Обо мне - PavelPA</title>
 <style>
-  /* Базовые стили */
   body {
     margin: 0; padding: 20px;
     background: #121212;
@@ -14,7 +13,7 @@
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     line-height: 1.5;
   }
-  h1, h2, h3 {
+  h1, h3 {
     color: #f0f0f0;
     margin-bottom: 16px;
   }
@@ -22,16 +21,7 @@
     color: #bbb;
     margin-bottom: 12px;
   }
-  a {
-    color: #4fc3f7;
-    text-decoration: none;
-  }
-  a:hover {
-    text-decoration: underline;
-  }
-
-  /* Кнопка */
-  #toggle-books-btn {
+  button {
     display: inline-block;
     padding: 12px 24px;
     margin: 20px 0;
@@ -43,34 +33,19 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
-  #toggle-books-btn:hover {
+  button:hover {
     background-color: #3a9bdc;
   }
-
-  /* Контейнер книг */
   #books-list {
     max-width: 700px;
     margin: 0 auto 40px;
   }
   article.book-item {
-    display: flex;
-    gap: 16px;
     margin-bottom: 24px;
-    align-items: flex-start;
     background: #1f1f1f;
     border-radius: 10px;
-    padding: 12px;
+    padding: 12px 20px;
     box-shadow: 0 2px 8px rgb(0 0 0 / 0.7);
-  }
-  article.book-item img {
-    border-radius: 6px;
-    flex-shrink: 0;
-    width: 60px;
-    height: 90px;
-    object-fit: cover;
-  }
-  article.book-item div {
-    flex: 1;
   }
   article.book-item h3 {
     margin: 0 0 6px 0;
@@ -82,22 +57,12 @@
     font-size: 0.95rem;
     color: #bbb;
   }
-
-  /* Адаптивность */
   @media (max-width: 480px) {
     body {
       padding: 12px 16px;
     }
-    article.book-item {
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-    article.book-item img {
-      margin-bottom: 12px;
-    }
-    article.book-item div {
-      flex: none;
+    #books-list {
+      padding: 0 8px;
     }
   }
 </style>
@@ -106,7 +71,11 @@
 
 <h1>Обо мне</h1>
 
-<p>Привет! Меня зовут Павел, и я увлекаюсь саморазвитием и бизнес-литературой. Ниже — книги, которые я прочитал и могу рекомендовать для вдохновения и полезных знаний.</p>
+<p>Меня зовут Павел, мне 14 лет. Я активно развиваюсь в спорте и технологиях, уделяю внимание как физическому, так и ментальному росту. Занимаюсь боксом — работаю над выносливостью, дисциплиной и силой, поскольку верю, что спорт учит не только телу, но и характеру.<br><br>
+Параллельно я увлечён программированием и создаю собственного Telegram-ассистента PavelPA с функциями голосовых ответов, напоминаний и генерации изображений. Этот проект помогает мне изучать современные технологии и искусственный интеллект на практике.<br><br>
+С детства я фанат техники и мечтал о квадроцикле Yamaha YFZ 450 — моей мечте уже более 10 лет, и совсем недавно она сбылась. Этот квадроцикл для меня не просто средство передвижения — это символ упорства и награда за труд.<br><br>
+Мне интересно открывать новое, ставить амбициозные цели и постепенно превращать мечты в реальность. Я уверен, что именно сочетание дисциплины, технологий и страсти к развитию поможет мне добиться успеха в будущем.<br><br>
+Подписывайтесь на мои соцсети, Спасибо.</p>
 
 <button id="toggle-books-btn" aria-expanded="false" aria-controls="books-list">
   Книги, которые я прочитал и советую к прочтению
@@ -114,75 +83,48 @@
 
 <section id="books-list" hidden>
   <article class="book-item">
-    <img src="https://covers.openlibrary.org/b/id/8231856-L.jpg" alt="Обложка книги Самый богатый человек в Вавилоне" />
-    <div>
-      <h3>«Самый богатый человек в Вавилоне» — Джордж Клейсон</h3>
-      <p>Классика финансовой мудрости — простые принципы накопления богатства, проверенные временем.</p>
-    </div>
+    <h3>«Самый богатый человек в Вавилоне» — Джордж Клейсон</h3>
+    <p>Классика финансовой мудрости — простые принципы накопления богатства, проверенные временем.</p>
   </article>
 
   <article class="book-item">
-    <img src="https://m.media-amazon.com/images/I/41qTpGe3pKL._SX331_BO1,204,203,200_.jpg" alt="Обложка книги Думай как миллионер" />
-    <div>
-      <h3>«Думай как миллионер» — Харв Экер</h3>
-      <p>Образ мышления и привычки, которые помогают людям добиваться финансового успеха.</p>
-    </div>
+    <h3>«Думай как миллионер» — Харв Экер</h3>
+    <p>Образ мышления и привычки, которые помогают людям добиваться финансового успеха.</p>
   </article>
 
   <article class="book-item">
-    <img src="https://images-na.ssl-images-amazon.com/images/I/41Ulu6hR5bL._SX327_BO1,204,203,200_.jpg" alt="Обложка книги Тонкое искусство пофигизма" />
-    <div>
-      <h3>«Тонкое искусство пофигизма» — Марк Мэнсон</h3>
-      <p>Необычный взгляд на личностный рост и умение правильно расставлять приоритеты.</p>
-    </div>
+    <h3>«Тонкое искусство пофигизма» — Марк Мэнсон</h3>
+    <p>Необычный взгляд на личностный рост и умение правильно расставлять приоритеты.</p>
   </article>
 
   <article class="book-item">
-    <img src="https://upload.wikimedia.org/wikipedia/ru/0/0a/%D0%9B%D0%B0%D1%80%D1%80%D0%B8_%D0%9A%D0%B8%D0%BD%D0%B3_-_%D0%9A%D0%B0%D0%BA_%D1%80%D0%B0%D0%B7%D0%B3%D0%BE%D0%B2%D0%B0%D1%80%D0%B8%D1%82%D1%8C%D1%81%D1%8F_%D1%81_%D0%BA%D0%B5%D0%BC_%D1%83%D0%B3%D0%BE%D0%B4%D0%BD%D0%BE_%D0%BA%D0%BE%D0%B3%D0%BE%D0%B4%D0%BE.jpg" alt="Обложка книги Как разговаривать с кем угодно, когда угодно" />
-    <div>
-      <h3>«Как разговаривать с кем угодно, когда угодно» — Ларри Кинг</h3>
-      <p>Практические советы по ведению лёгких и эффективных разговоров в любой ситуации.</p>
-    </div>
+    <h3>«Как разговаривать с кем угодно, когда угодно» — Ларри Кинг</h3>
+    <p>Практические советы по ведению лёгких и эффективных разговоров в любой ситуации.</p>
   </article>
 
   <article class="book-item">
-    <img src="https://upload.wikimedia.org/wikipedia/ru/thumb/c/c5/Дейл_Карнеги_2.jpg/220px-Дейл_Карнеги_2.jpg" alt="Обложка книги Правила жизни успешных людей" />
-    <div>
-      <h3>«Правила жизни успешных людей» — Дейл Карнеги</h3>
-      <p>Основы построения успешной жизни и гармоничных отношений с людьми.</p>
-    </div>
+    <h3>«Правила жизни успешных людей» — Дейл Карнеги</h3>
+    <p>Основы построения успешной жизни и гармоничных отношений с людьми.</p>
   </article>
 
   <article class="book-item">
-    <img src="https://upload.wikimedia.org/wikipedia/ru/thumb/9/9c/%D0%9A%D0%B0%D0%BA_%D0%B7%D0%B0%D0%B2%D0%BE%D0%B5%D0%B2%D1%8B%D0%B2%D0%B0%D1%82%D1%8C_%D0%B4%D1%80%D1%83%D0%B7%D0%B5%D0%B9_%D0%B8_%D0%BE%D0%BA%D0%B0%D0%B7%D1%8B%D0%B2%D0%B0%D1%82%D1%8C_%D0%B2%D0%BB%D0%B8%D1%8F%D0%BD%D0%B8%D0%B5_%D0%BD%D0%B0_%D0%BB%D1%8E%D0%B4%D0%B5%D0%B9.jpg/220px-%D0%9A%D0%B0%D0%BA_%D0%B7%D0%B0%D0%B2%D0%BE%D0%B5%D0%B2%D1%8B%D0%B2%D0%B0%D1%82%D1%8C_%D0%B4%D1%80%D1%83%D0%B7%D0%B5%D0%B9_%D0%B8_%D0%BE%D0%BA%D0%B0%D0%B7%D1%8B%D0%B2%D0%B0%D1%82%D1%8C_%D0%B2%D0%BB%D0%B8%D1%8F%D0%BD%D0%B8%D0%B5_%D0%BD%D0%B0_%D0%BB%D1%8E%D0%B4%D0%B5%D0%B9.jpg" alt="Обложка книги Как завоевывать друзей и оказывать влияние на людей" />
-    <div>
-      <h3>«Как завоевывать друзей и оказывать влияние на людей» — Дейл Карнеги</h3>
-      <p>Вечная классика о навыках общения и влияния на окружающих.</p>
-    </div>
+    <h3>«Как завоевывать друзей и оказывать влияние на людей» — Дейл Карнеги</h3>
+    <p>Вечная классика о навыках общения и влияния на окружающих.</p>
   </article>
 
   <article class="book-item">
-    <img src="https://cdn1.ozone.ru/s3/multimedia-d/6000590053.jpg" alt="Обложка книги Бизнес без MBA" />
-    <div>
-      <h3>«Бизнес без MBA» — Олег Тиньков</h3>
-      <p>История предпринимателя с практическими уроками для тех, кто хочет начать бизнес.</p>
-    </div>
+    <h3>«Бизнес без MBA» — Олег Тиньков</h3>
+    <p>История предпринимателя с практическими уроками для тех, кто хочет начать бизнес.</p>
   </article>
 
   <article class="book-item">
-    <img src="https://images-na.ssl-images-amazon.com/images/I/51TxEB+OMNL._SX331_BO1,204,203,200_.jpg" alt="Обложка книги Правило номер 1 никогда не быть номер 2" />
-    <div>
-      <h3>«Правило номер 1: никогда не быть номер 2» — Дэн Мильштейн</h3>
-      <p>О том, как стать лидером в своей области и не останавливаться на достигнутом.</p>
-    </div>
+    <h3>«Правило номер 1: никогда не быть номер 2» — Дэн Мильштейн</h3>
+    <p>О том, как стать лидером в своей области и не останавливаться на достигнутом.</p>
   </article>
 
   <article class="book-item">
-    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/5f/48_Laws_of_Power.jpg/220px-48_Laws_of_Power.jpg" alt="Обложка книги 48 законов власти" />
-    <div>
-      <h3>«48 законов власти» — Роберт Грин</h3>
-      <p>Анализ стратегий власти и влияния на людей, которые используются в истории и бизнесе.</p>
-    </div>
+    <h3>«48 законов власти» — Роберт Грин</h3>
+    <p>Анализ стратегий власти и влияния на людей, которые используются в истории и бизнесе.</p>
   </article>
 </section>
 
