--- a/about.html
+++ b/about.html
@@ -20,18 +20,14 @@
       margin-bottom: 16px;
     }
 
-    .typing-text {
-      border-right: 2px solid #4fc3f7;
+    #typing-target {
       white-space: pre-wrap;
       overflow: hidden;
       font-size: 1rem;
+      border-right: 2px solid #4fc3f7;
+      animation: blink 0.8s step-end infinite;
       max-width: 100%;
-      animation: typing 9s steps(200, end), blink 0.8s step-end infinite;
-    }
-
-    @keyframes typing {
-      from { width: 0; }
-      to { width: 100%; }
+      min-height: 200px;
     }
 
     @keyframes blink {
@@ -89,7 +85,7 @@
         padding: 0 8px;
       }
 
-      .typing-text {
+      #typing-target {
         font-size: 0.95rem;
       }
     }
@@ -98,18 +94,7 @@
 <body>
 
 <h1>Обо мне</h1>
-
-<p class="typing-text">
-Меня зовут Павел, мне 14 лет. Я активно развиваюсь в спорте и технологиях, уделяю внимание как физическому, так и ментальному росту. Занимаюсь боксом — работаю над выносливостью, дисциплиной и силой, поскольку верю, что спорт учит не только телу, но и характеру.
-
-Параллельно я увлечён программированием и создаю собственного Telegram-ассистента PavelPA с функциями голосовых ответов, напоминаний и генерации изображений. Этот проект помогает мне изучать современные технологии и искусственный интеллект на практике.
-
-С детства я фанат техники и мечтал о квадроцикле Yamaha YFZ 450 — моей мечте уже более 10 лет, и совсем недавно она сбылась. Этот квадроцикл для меня не просто средство передвижения — это символ упорства и награда за труд.
-
-Мне интересно открывать новое, ставить амбициозные цели и постепенно превращать мечты в реальность. Я уверен, что именно сочетание дисциплины, технологий и страсти к развитию поможет мне добиться успеха в будущем.
-
-Подписывайтесь на мои соцсети, Спасибо.
-</p>
+<p id="typing-target"></p>
 
 <button id="toggle-books-btn" aria-expanded="false" aria-controls="books-list">
   Книги, которые я прочитал и советую к прочтению
@@ -155,6 +140,30 @@
 </section>
 
 <script>
+  const text = `Меня зовут Павел, мне 14 лет. Я активно развиваюсь в спорте и технологиях, уделяю внимание как физическому, так и ментальному росту. Занимаюсь боксом — работаю над выносливостью, дисциплиной и силой, поскольку верю, что спорт учит не только телу, но и характеру.
+
+Параллельно я увлечён программированием и создаю собственного Telegram-ассистента PavelPA с функциями голосовых ответов, напоминаний и генерации изображений. Этот проект помогает мне изучать современные технологии и искусственный интеллект на практике.
+
+С детства я фанат техники и мечтал о квадроцикле Yamaha YFZ 450 — моей мечте уже более 10 лет, и совсем недавно она сбылась. Этот квадроцикл для меня не просто средство передвижения — это символ упорства и награда за труд.
+
+Мне интересно открывать новое, ставить амбициозные цели и постепенно превращать мечты в реальность. Я уверен, что именно сочетание дисциплины, технологий и страсти к развитию поможет мне добиться успеха в будущем.
+
+Подписывайтесь на мои соцсети, Спасибо.`;
+
+  const target = document.getElementById("typing-target");
+  let i = 0;
+
+  function typeLetter() {
+    if (i < text.length) {
+      target.textContent += text.charAt(i);
+      i++;
+      setTimeout(typeLetter, 18); // скорость печати (мс)
+    }
+  }
+
+  window.addEventListener("DOMContentLoaded", typeLetter);
+
+  // Кнопка отображения книг
   const btn = document.getElementById('toggle-books-btn');
   const booksList = document.getElementById('books-list');
 
