--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   </p>
   <div class="nav-links">
     <a href="about.html" class="smooth-link">Обо мне</a>
-    <a href="https://www.tiktok.com/@pauelky" target="_blank" rel="noopener noreferrer">TikTok</a>
+    <a href="https://www.tiktok.com/@ebitda001" target="_blank" rel="noopener noreferrer">TikTok</a>
     <a href="https://t.me/PauelkyyBot" target="_blank" rel="noopener noreferrer">Telegram-бот</a>
   </div>
 </div>
