--- a/about.html
+++ b/about.html
@@ -101,42 +101,77 @@
 </button>
 
 <section id="books-list" hidden>
+
   <article class="book-item">
     <h3>«Самый богатый человек в Вавилоне» — Джордж Клейсон</h3>
     <p>Классика финансовой мудрости — простые принципы накопления богатства, проверенные временем.</p>
   </article>
+
   <article class="book-item">
     <h3>«Думай как миллионер» — Харв Экер</h3>
     <p>Образ мышления и привычки, которые помогают людям добиваться финансового успеха.</p>
   </article>
+
   <article class="book-item">
     <h3>«Тонкое искусство пофигизма» — Марк Мэнсон</h3>
     <p>Необычный взгляд на личностный рост и умение правильно расставлять приоритеты.</p>
   </article>
+
   <article class="book-item">
     <h3>«Как разговаривать с кем угодно, когда угодно» — Ларри Кинг</h3>
-    <p>Практические советы по ведению лёгких и эффективных разговоров в любой ситуации.</p>
+    <p>Советы легендарного телеведущего по эффективной коммуникации в любой ситуации.</p>
   </article>
+
   <article class="book-item">
     <h3>«Правила жизни успешных людей» — Дейл Карнеги</h3>
-    <p>Основы построения успешной жизни и гармоничных отношений с людьми.</p>
+    <p>Мудрые принципы, которые помогли миллионам стать более уверенными и успешными.</p>
   </article>
+
   <article class="book-item">
-    <h3>«Как завоевывать друзей и оказывать влияние на людей» — Дейл Карнеги</h3>
-    <p>Вечная классика о навыках общения и влияния на окружающих.</p>
+    <h3>«Как завоёвывать друзей и оказывать влияние на людей» — Дейл Карнеги</h3>
+    <p>Классика о том, как строить отношения, убеждать и быть влиятельным.</p>
   </article>
+
   <article class="book-item">
     <h3>«Бизнес без MBA» — Олег Тиньков</h3>
-    <p>История предпринимателя с практическими уроками для тех, кто хочет начать бизнес.</p>
+    <p>Жизненный путь предпринимателя и советы для тех, кто хочет строить бизнес по-своему.</p>
   </article>
+
   <article class="book-item">
     <h3>«Правило номер 1: никогда не быть номер 2» — Дэн Мильштейн</h3>
-    <p>О том, как стать лидером в своей области и не останавливаться на достигнутом.</p>
+    <p>Как стать лидером в конкурентной среде, не теряя свою индивидуальность.</p>
   </article>
+
   <article class="book-item">
     <h3>«48 законов власти» — Роберт Грин</h3>
-    <p>Анализ стратегий власти и влияния на людей, которые используются в истории и бизнесе.</p>
+    <p>Психология влияния и стратегии власти, основанные на реальных исторических примерах.</p>
   </article>
+
+  <article class="book-item">
+    <h3>«21 неопровержимый закон лидерства» — Джон Максвелл</h3>
+    <p>Мировой бестселлер о принципах, которые делают лидеров по-настоящему великими.</p>
+  </article>
+
+  <article class="book-item">
+    <h3>«Атомные привычки» — Джеймс Клир</h3>
+    <p>Как маленькие привычки ежедневно формируют большие изменения в жизни.</p>
+  </article>
+
+  <article class="book-item">
+    <h3>«Гении и аутсайдеры» — Малкольм Гладуэлл</h3>
+    <p>Почему успех — это не только талант, но и стечение обстоятельств, труда и времени.</p>
+  </article>
+
+  <article class="book-item">
+    <h3>«Виртуозы общения» — Чарльз Дахигг</h3>
+    <p>О том, как создавать эффективные команды, принимать решения и общаться с пользой.</p>
+  </article>
+
+  <article class="book-item">
+    <h3>«Как разговаривать с мудаками» — Марк Гоулстон</h3>
+    <p>Практическое руководство по общению с токсичными людьми и сохранению самообладания.</p>
+  </article>
+
 </section>
 
 <script>
@@ -163,7 +198,6 @@
 
   window.addEventListener("DOMContentLoaded", typeLetter);
 
-  // Кнопка отображения книг
   const btn = document.getElementById('toggle-books-btn');
   const booksList = document.getElementById('books-list');
 
