--- a/index.html
+++ b/index.html
@@ -7,38 +7,43 @@
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;600&display=swap" rel="stylesheet" />
 <style>
   * { margin:0; padding:0; box-sizing:border-box; }
-  body, html { height:100%; font-family: 'Manrope', sans-serif; background:url('https://www.transparenttextures.com/patterns/asfalt-light.png') repeat; background-color:#121214; color:#ddd; }
-  #stars { position: fixed; top:0; left:0; width:100%; height:100%; z-index:-1; background: radial-gradient(circle at center, #1e1e1e 0%, #121214 80%); pointer-events:none; }
-  #preloader { position: fixed; top:0; left:0; width:100vw; height:100vh; background:#121214; display:flex; justify-content:center; align-items:center; z-index:9999; }
-  #preloader .spinner { border:5px solid rgba(255,255,255,0.2); border-top:5px solid #ddd; border-radius:50%; width:60px; height:60px; animation:spin 1s linear infinite; }
-  @keyframes spin { to{ transform:rotate(360deg);} }
-  .container { max-width: 1000px; width: 100%; margin:50px auto; padding:40px; border-radius:16px; background: rgba(30,30,30,0.85); box-shadow:0 8px 24px rgba(0,0,0,0.8); backdrop-filter: blur(10px); border:1px solid rgba(255,255,255,0.1); text-align:center; animation:fadeSlideIn 1s ease forwards; }
-  @keyframes fadeSlideIn { from {opacity:0; transform:translateY(30px);} to{opacity:1; transform:translateY(0);} }
-  h1 { font-size:3rem; margin-bottom:20px; color:#f0f0f0; }
-  p.description { font-size:1.2rem; color:#bbb; margin-bottom:30px; line-height:1.5; }
-  .nav-links { display:flex; justify-content:center; gap:20px; flex-wrap:wrap; margin-bottom:50px; }
-  .nav-links a { color:#ddd; text-decoration:none; font-weight:600; font-size:1.1rem; padding:12px 30px; border-radius:10px; border:1.5px solid transparent; background: rgba(255,255,255,0.05); transition:all 0.3s ease; box-shadow:0 2px 6px rgba(0,0,0,0.3); }
-  .nav-links a:hover { background: rgba(255,255,255,0.15); border-color:#aaa; color:#fff; transform:translateY(-3px); }
-  
-  /* Преимущества */
-  .features { display:grid; grid-template-columns: repeat(auto-fit, minmax(200px,1fr)); gap:30px; margin-bottom:50px; }
-  .feature { background: rgba(255,255,255,0.05); border-radius:15px; padding:20px; transition:transform 0.3s ease; }
-  .feature:hover { transform: translateY(-5px); }
-  .feature h3 { margin-bottom:12px; color:#ffcc00; }
-  .feature p { color:#ddd; }
+  body, html { height:100%; font-family: 'Manrope', sans-serif; background:#0d0d0f; color:#ddd; }
+  #stars { position: fixed; top:0; left:0; width:100%; height:100%; z-index:-1; background: radial-gradient(circle at center, #0d0d0f 0%, #050507 90%); pointer-events:none; }
 
-  /* Галерея */
-  .gallery { display:grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:20px; margin-bottom:50px; }
-  .gallery img { width:100%; border-radius:15px; border:2px solid #ffcc00; box-shadow:0 6px 15px rgba(0,0,0,0.5); transition: transform 0.3s ease; }
-  .gallery img:hover { transform: scale(1.05); }
+  #preloader { position: fixed; top:0; left:0; width:100vw; height:100vh; background:#0d0d0f; display:flex; justify-content:center; align-items:center; z-index:9999; }
+  #preloader .spinner { border:5px solid rgba(255,255,255,0.15); border-top:5px solid #ffcc00; border-radius:50%; width:60px; height:60px; animation:spin 1s linear infinite; }
+  @keyframes spin { to{ transform:rotate(360deg);} }
+
+  .container { max-width: 1000px; width: 90%; margin:50px auto; padding:50px; border-radius:20px; background: rgba(20,20,25,0.9); box-shadow:0 12px 30px rgba(0,0,0,0.8); backdrop-filter: blur(12px); border:1px solid rgba(255,255,255,0.05); text-align:center; animation:fadeSlideIn 1s ease forwards; }
+  @keyframes fadeSlideIn { from {opacity:0; transform:translateY(40px);} to{opacity:1; transform:translateY(0);} }
+
+  h1 { font-size:3rem; margin-bottom:20px; color:#ffcc00; text-shadow: 0 0 8px #ffcc00; }
+  p.description { font-size:1.2rem; color:#bbb; margin-bottom:40px; line-height:1.6; }
+
+  .nav-links { display:flex; justify-content:center; gap:20px; flex-wrap:wrap; margin-bottom:50px; }
+  .nav-links a { color:#ffcc00; text-decoration:none; font-weight:600; font-size:1.1rem; padding:14px 32px; border-radius:12px; border:1px solid rgba(255,204,0,0.3); background: rgba(255,204,0,0.05); transition:all 0.3s ease; box-shadow:0 4px 12px rgba(0,0,0,0.3); }
+  .nav-links a:hover { background: rgba(255,204,0,0.15); transform:translateY(-3px); }
+
+  /* Преимущества */
+  .features { display:grid; grid-template-columns: repeat(auto-fit, minmax(220px,1fr)); gap:30px; margin-bottom:50px; }
+  .feature { background: rgba(255,204,0,0.05); border-radius:20px; padding:25px; transition:transform 0.3s ease, box-shadow 0.3s ease; }
+  .feature:hover { transform: translateY(-8px); box-shadow: 0 12px 28px rgba(255,204,0,0.4); }
+  .feature h3 { margin-bottom:15px; color:#ffcc00; font-size:1.3rem; }
+  .feature p { color:#ddd; line-height:1.5; }
 
   /* Отзывы */
-  .reviews { display:grid; grid-template-columns: repeat(auto-fit, minmax(250px,1fr)); gap:20px; margin-bottom:50px; }
-  .review { background: rgba(255,255,255,0.05); border-radius:15px; padding:20px; color:#ddd; }
+  .reviews { display:grid; grid-template-columns: repeat(auto-fit, minmax(260px,1fr)); gap:25px; margin-bottom:50px; }
+  .review { background: rgba(255,204,0,0.05); border-radius:20px; padding:25px; color:#ddd; transition: transform 0.3s ease, box-shadow 0.3s ease; }
+  .review:hover { transform: translateY(-5px); box-shadow:0 10px 25px rgba(255,204,0,0.3); }
 
-  footer { text-align:center; padding:20px; color:#aaa; font-size:0.9rem; }
+  footer { text-align:center; padding:25px; color:#aaa; font-size:0.9rem; }
 
-  @media (max-width:600px){ h1{ font-size:2.2rem;} p.description{ font-size:1rem;} .nav-links{ flex-direction:column; gap:15px;} .nav-links a{ font-size:1rem; padding:10px 24px;} }
+  @media (max-width:600px){ 
+    h1{ font-size:2.2rem;} 
+    p.description{ font-size:1rem; margin-bottom:30px;} 
+    .nav-links{ flex-direction:column; gap:15px;} 
+    .nav-links a{ font-size:1rem; padding:10px 24px;} 
+  }
 </style>
 </head>
 <body>
@@ -67,17 +72,6 @@
     <div class="feature"><h3>🎲 Игры</h3><p>Мини-игры, чтобы отдыхать и развивать логику без усилий.</p></div>
     <div class="feature"><h3>🌤 Погода</h3><p>Простой прогноз погоды, чтобы планировать свой день без сюрпризов.</p></div>
     <div class="feature"><h3>💬 Ответы</h3><p>Задавай вопросы и получай развернутые ответы от интеллектуального помощника.</p></div>
-  </div>
-
-  <!-- Галерея -->
-  <h2>Галерея бота</h2>
-  <div class="gallery">
-    <img src="https://i.imgur.com/3t6hXxY.png" alt="Скриншот бота 1">
-    <img src="https://i.imgur.com/6L8qFZk.png" alt="Скриншот бота 2">
-    <img src="https://i.imgur.com/4v3q3H9.png" alt="Скриншот бота 3">
-    <img src="https://i.imgur.com/XyU5hUy.png" alt="Скриншот бота 4">
-    <img src="https://i.imgur.com/8K7i7sQ.png" alt="Скриншот бота 5">
-    <img src="https://i.imgur.com/6oGZC6X.png" alt="Скриншот бота 6">
   </div>
 
   <!-- Отзывы -->
@@ -116,10 +110,33 @@
   const canvas = document.getElementById('stars');
   const ctx = canvas.getContext('2d');
   let w,h,stars=[];
-  function init(){ w=window.innerWidth; h=window.innerHeight; canvas.width=w; canvas.height=h; stars=[]; for(let i=0;i<180;i++){ stars.push({x:Math.random()*w, y:Math.random()*h, baseX:0, baseY:0, radius:Math.random()*1.1+0.2, alpha:Math.random()*0.7+0.3, alphaChange:(Math.random()*0.01)+0.002}); stars[i].baseX=stars[i].x; stars[i].baseY=stars[i].y; } }
+  function init(){ 
+    w=window.innerWidth; h=window.innerHeight; 
+    canvas.width=w; canvas.height=h; 
+    stars=[]; 
+    for(let i=0;i<180;i++){ 
+      stars.push({x:Math.random()*w, y:Math.random()*h, baseX:0, baseY:0, radius:Math.random()*1.1+0.2, alpha:Math.random()*0.7+0.3, alphaChange:(Math.random()*0.01)+0.002}); 
+      stars[i].baseX=stars[i].x; stars[i].baseY=stars[i].y; 
+    } 
+  }
   let mouseX=w/2, mouseY=h/2;
   window.addEventListener('mousemove', e=>{ mouseX=e.clientX; mouseY=e.clientY; });
-  function draw(){ ctx.clearRect(0,0,w,h); for(let s of stars){ const moveX=(mouseX-w/2)*0.02*(s.radius); const moveY=(mouseY-h/2)*0.02*(s.radius); ctx.beginPath(); ctx.arc(s.baseX+moveX, s.baseY+moveY, s.radius,0,2*Math.PI); ctx.fillStyle=`rgba(255,255,255,${s.alpha})`; ctx.shadowColor='rgba(255,255,255,0.2)'; ctx.shadowBlur=3; ctx.fill(); s.alpha+=s.alphaChange; if(s.alpha<=0.3||s.alpha>=1) s.alphaChange=-s.alphaChange; } requestAnimationFrame(draw);}
+  function draw(){ 
+    ctx.clearRect(0,0,w,h); 
+    for(let s of stars){ 
+      const moveX=(mouseX-w/2)*0.02*(s.radius); 
+      const moveY=(mouseY-h/2)*0.02*(s.radius); 
+      ctx.beginPath(); 
+      ctx.arc(s.baseX+moveX, s.baseY+moveY, s.radius,0,2*Math.PI); 
+      ctx.fillStyle=`rgba(255,255,255,${s.alpha})`; 
+      ctx.shadowColor='rgba(255,255,255,0.2)'; 
+      ctx.shadowBlur=3; 
+      ctx.fill(); 
+      s.alpha+=s.alphaChange; 
+      if(s.alpha<=0.3||s.alpha>=1) s.alphaChange=-s.alphaChange; 
+    } 
+    requestAnimationFrame(draw);
+  }
   window.addEventListener('resize', init);
   init(); draw();
 </script>
