--- a/index.html
+++ b/index.html
@@ -7,49 +7,50 @@
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;600&display=swap" rel="stylesheet" />
 <style>
   * { margin:0; padding:0; box-sizing:border-box; }
-  body, html { height:100%; font-family: 'Manrope', sans-serif; background:#0d0d0f; color:#ddd; }
-  #stars { position: fixed; top:0; left:0; width:100%; height:100%; z-index:-1; background: radial-gradient(circle at center, #0d0d0f 0%, #050507 90%); pointer-events:none; }
-
-  #preloader { position: fixed; top:0; left:0; width:100vw; height:100vh; background:#0d0d0f; display:flex; justify-content:center; align-items:center; z-index:9999; }
-  #preloader .spinner { border:5px solid rgba(255,255,255,0.15); border-top:5px solid #ffcc00; border-radius:50%; width:60px; height:60px; animation:spin 1s linear infinite; }
+  body, html { height:100%; font-family: 'Manrope', sans-serif; background:#121212; color:#ddd; }
+  
+  #preloader { position: fixed; top:0; left:0; width:100vw; height:100vh; background:#121212; display:flex; justify-content:center; align-items:center; z-index:9999; }
+  #preloader .spinner { border:5px solid rgba(255,255,255,0.15); border-top:5px solid #ffcc00; border-radius:50%; width:50px; height:50px; animation:spin 1s linear infinite; }
   @keyframes spin { to{ transform:rotate(360deg);} }
 
-  .container { max-width: 1000px; width: 90%; margin:50px auto; padding:50px; border-radius:20px; background: rgba(20,20,25,0.9); box-shadow:0 12px 30px rgba(0,0,0,0.8); backdrop-filter: blur(12px); border:1px solid rgba(255,255,255,0.05); text-align:center; animation:fadeSlideIn 1s ease forwards; }
-  @keyframes fadeSlideIn { from {opacity:0; transform:translateY(40px);} to{opacity:1; transform:translateY(0);} }
-
-  h1 { font-size:3rem; margin-bottom:20px; color:#ffcc00; text-shadow: 0 0 8px #ffcc00; }
-  p.description { font-size:1.2rem; color:#bbb; margin-bottom:40px; line-height:1.6; }
+  .container { max-width: 900px; width: 90%; margin:60px auto; padding:40px; border-radius:16px; background: #1c1c1c; box-shadow:0 6px 18px rgba(0,0,0,0.5); text-align:center; }
+  
+  h1 { font-size:2.8rem; margin-bottom:15px; color:#ffcc00; }
+  p.description { font-size:1.15rem; color:#bbb; margin-bottom:35px; line-height:1.5; }
 
   .nav-links { display:flex; justify-content:center; gap:20px; flex-wrap:wrap; margin-bottom:50px; }
-  .nav-links a { color:#ffcc00; text-decoration:none; font-weight:600; font-size:1.1rem; padding:14px 32px; border-radius:12px; border:1px solid rgba(255,204,0,0.3); background: rgba(255,204,0,0.05); transition:all 0.3s ease; box-shadow:0 4px 12px rgba(0,0,0,0.3); }
-  .nav-links a:hover { background: rgba(255,204,0,0.15); transform:translateY(-3px); }
+  .nav-links a { font-weight:600; font-size:1.1rem; padding:12px 28px; border-radius:12px; text-decoration:none; color:#ddd; background: #2a2a2a; transition: all 0.3s ease; }
+  .nav-links a:hover { background:#ffcc00; color:#121212; transform:translateY(-3px); }
+
+  /* Выделяем кнопку "Обо мне" */
+  .nav-links a:first-child { background:#ffcc00; color:#121212; box-shadow:0 4px 12px rgba(255,204,0,0.4); }
+  .nav-links a:first-child:hover { background:#e6b800; }
 
   /* Преимущества */
-  .features { display:grid; grid-template-columns: repeat(auto-fit, minmax(220px,1fr)); gap:30px; margin-bottom:50px; }
-  .feature { background: rgba(255,204,0,0.05); border-radius:20px; padding:25px; transition:transform 0.3s ease, box-shadow 0.3s ease; }
-  .feature:hover { transform: translateY(-8px); box-shadow: 0 12px 28px rgba(255,204,0,0.4); }
-  .feature h3 { margin-bottom:15px; color:#ffcc00; font-size:1.3rem; }
-  .feature p { color:#ddd; line-height:1.5; }
+  .features { display:grid; grid-template-columns: repeat(auto-fit, minmax(220px,1fr)); gap:25px; margin-bottom:50px; }
+  .feature { background:#2a2a2a; border-radius:16px; padding:22px; transition: transform 0.3s ease, background 0.3s ease; }
+  .feature:hover { transform: translateY(-5px); background:#333; }
+  .feature h3 { margin-bottom:12px; color:#ffcc00; font-size:1.25rem; }
+  .feature p { color:#ddd; }
 
   /* Отзывы */
   .reviews { display:grid; grid-template-columns: repeat(auto-fit, minmax(260px,1fr)); gap:25px; margin-bottom:50px; }
-  .review { background: rgba(255,204,0,0.05); border-radius:20px; padding:25px; color:#ddd; transition: transform 0.3s ease, box-shadow 0.3s ease; }
-  .review:hover { transform: translateY(-5px); box-shadow:0 10px 25px rgba(255,204,0,0.3); }
+  .review { background:#2a2a2a; border-radius:16px; padding:22px; color:#ddd; transition: transform 0.3s ease, background 0.3s ease; }
+  .review:hover { transform: translateY(-3px); background:#333; }
 
   footer { text-align:center; padding:25px; color:#aaa; font-size:0.9rem; }
 
   @media (max-width:600px){ 
-    h1{ font-size:2.2rem;} 
-    p.description{ font-size:1rem; margin-bottom:30px;} 
-    .nav-links{ flex-direction:column; gap:15px;} 
-    .nav-links a{ font-size:1rem; padding:10px 24px;} 
+    h1{ font-size:2rem;} 
+    p.description{ font-size:1rem; margin-bottom:25px;} 
+    .nav-links{ flex-direction:column; gap:12px;} 
+    .nav-links a{ font-size:1rem; padding:10px 20px;} 
   }
 </style>
 </head>
 <body>
 
 <div id="preloader"><div class="spinner"></div></div>
-<canvas id="stars"></canvas>
 
 <div class="container" id="content">
   <!-- Hero -->
@@ -58,6 +59,7 @@
     Умный Telegram-ассистент с голосом, генерацией и интеллектом.<br>
     Помогаю в повседневных задачах, мотивирую, показываю факты и учусь вместе с тобой.
   </p>
+
   <div class="nav-links">
     <a href="about.html" class="smooth-link">Обо мне</a>
     <a href="https://www.tiktok.com/@ebitda001" target="_blank">TikTok</a>
@@ -105,40 +107,6 @@
       setTimeout(()=>{ window.location.href=href; },500);
     });
   });
-
-  // Звёзды с параллаксом
-  const canvas = document.getElementById('stars');
-  const ctx = canvas.getContext('2d');
-  let w,h,stars=[];
-  function init(){ 
-    w=window.innerWidth; h=window.innerHeight; 
-    canvas.width=w; canvas.height=h; 
-    stars=[]; 
-    for(let i=0;i<180;i++){ 
-      stars.push({x:Math.random()*w, y:Math.random()*h, baseX:0, baseY:0, radius:Math.random()*1.1+0.2, alpha:Math.random()*0.7+0.3, alphaChange:(Math.random()*0.01)+0.002}); 
-      stars[i].baseX=stars[i].x; stars[i].baseY=stars[i].y; 
-    } 
-  }
-  let mouseX=w/2, mouseY=h/2;
-  window.addEventListener('mousemove', e=>{ mouseX=e.clientX; mouseY=e.clientY; });
-  function draw(){ 
-    ctx.clearRect(0,0,w,h); 
-    for(let s of stars){ 
-      const moveX=(mouseX-w/2)*0.02*(s.radius); 
-      const moveY=(mouseY-h/2)*0.02*(s.radius); 
-      ctx.beginPath(); 
-      ctx.arc(s.baseX+moveX, s.baseY+moveY, s.radius,0,2*Math.PI); 
-      ctx.fillStyle=`rgba(255,255,255,${s.alpha})`; 
-      ctx.shadowColor='rgba(255,255,255,0.2)'; 
-      ctx.shadowBlur=3; 
-      ctx.fill(); 
-      s.alpha+=s.alphaChange; 
-      if(s.alpha<=0.3||s.alpha>=1) s.alphaChange=-s.alphaChange; 
-    } 
-    requestAnimationFrame(draw);
-  }
-  window.addEventListener('resize', init);
-  init(); draw();
 </script>
 </body>
 </html>
