--- a/about.html
+++ b/about.html
@@ -1,218 +1,134 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Обо мне - PavelPA</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 20px;
-      background: #121212;
-      color: #ddd;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      line-height: 1.5;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Обо мне - PavelPA</title>
+<style>
+body {
+  margin: 0;
+  padding: 30px;
+  background: #121212;
+  color: #ddd;
+  font-family: 'Manrope', sans-serif;
+  line-height: 1.7;
+}
 
-    h1, h3 {
-      color: #f0f0f0;
-      margin-bottom: 16px;
-    }
+h1 {
+  color: #ffcc00;
+  font-size: 2.8rem;
+  margin-bottom: 20px;
+  text-align: center;
+}
 
-    #typing-target {
-      white-space: pre-wrap;
-      overflow: hidden;
-      font-size: 1rem;
-      border-right: 2px solid #4fc3f7;
-      animation: blink 0.8s step-end infinite;
-      max-width: 100%;
-      min-height: 200px;
-    }
+#wave-text {
+  font-size: 1.2rem;
+  max-width: 800px;
+  margin: 0 auto 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0.2rem;
+}
 
-    @keyframes blink {
-      50% { border-color: transparent; }
-    }
+#wave-text span {
+  display: inline-block;
+  opacity: 0;
+  transform: translateY(20px);
+  animation: wave 0.6s forwards;
+}
 
-    button {
-      display: inline-block;
-      padding: 12px 24px;
-      margin: 20px 0;
-      font-size: 1rem;
-      color: #121212;
-      background-color: #4fc3f7;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
+@keyframes wave {
+  to { opacity: 1; transform: translateY(0); }
+}
 
-    button:hover {
-      background-color: #3a9bdc;
-    }
+button {
+  display: block;
+  margin: 0 auto 40px;
+  padding: 14px 28px;
+  font-size: 1rem;
+  background: #ffcc00;
+  color: #121212;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: transform 0.2s ease, background 0.3s ease;
+}
 
-    #books-list {
-      max-width: 700px;
-      margin: 0 auto 40px;
-    }
+button:hover {
+  transform: translateY(-3px);
+  background: #e6b800;
+}
 
-    article.book-item {
-      margin-bottom: 24px;
-      background: #1f1f1f;
-      border-radius: 10px;
-      padding: 12px 20px;
-      box-shadow: 0 2px 8px rgb(0 0 0 / 0.7);
-    }
+#books-list {
+  max-width: 700px;
+  margin: 0 auto 40px;
+}
 
-    article.book-item h3 {
-      margin: 0 0 6px 0;
-      font-size: 1.1rem;
-      color: #e0e0e0;
-    }
+article.book-item {
+  margin-bottom: 20px;
+  background: #1f1f1f;
+  border-radius: 10px;
+  padding: 14px 20px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.7);
+}
 
-    article.book-item p {
-      margin: 0;
-      font-size: 0.95rem;
-      color: #bbb;
-    }
+article.book-item h3 { color: #ffcc00; margin-bottom: 6px; }
+article.book-item p { color: #bbb; }
 
-    @media (max-width: 480px) {
-      body {
-        padding: 12px 16px;
-      }
-
-      #books-list {
-        padding: 0 8px;
-      }
-
-      #typing-target {
-        font-size: 0.95rem;
-      }
-    }
-  </style>
+@media (max-width: 480px) {
+  body { padding: 16px; }
+  #wave-text { font-size: 1rem; }
+}
+</style>
 </head>
 <body>
 
 <h1>Обо мне</h1>
-<p id="typing-target"></p>
+<p id="wave-text"></p>
 
 <button id="toggle-books-btn" aria-expanded="false" aria-controls="books-list">
   Книги, которые я прочитал и советую к прочтению
 </button>
 
 <section id="books-list" hidden>
-
   <article class="book-item">
     <h3>«Самый богатый человек в Вавилоне» — Джордж Клейсон</h3>
     <p>Классика финансовой мудрости — простые принципы накопления богатства, проверенные временем.</p>
   </article>
-
-  <article class="book-item">
-    <h3>«Думай как миллионер» — Харв Экер</h3>
-    <p>Образ мышления и привычки, которые помогают людям добиваться финансового успеха.</p>
-  </article>
-
-  <article class="book-item">
-    <h3>«Тонкое искусство пофигизма» — Марк Мэнсон</h3>
-    <p>Необычный взгляд на личностный рост и умение правильно расставлять приоритеты.</p>
-  </article>
-
-  <article class="book-item">
-    <h3>«Как разговаривать с кем угодно, когда угодно» — Ларри Кинг</h3>
-    <p>Советы легендарного телеведущего по эффективной коммуникации в любой ситуации.</p>
-  </article>
-
-  <article class="book-item">
-    <h3>«Правила жизни успешных людей» — Дейл Карнеги</h3>
-    <p>Мудрые принципы, которые помогли миллионам стать более уверенными и успешными.</p>
-  </article>
-
-  <article class="book-item">
-    <h3>«Как завоёвывать друзей и оказывать влияние на людей» — Дейл Карнеги</h3>
-    <p>Классика о том, как строить отношения, убеждать и быть влиятельным.</p>
-  </article>
-
-  <article class="book-item">
-    <h3>«Бизнес без MBA» — Олег Тиньков</h3>
-    <p>Жизненный путь предпринимателя и советы для тех, кто хочет строить бизнес по-своему.</p>
-  </article>
-
-  <article class="book-item">
-    <h3>«Правило номер 1: никогда не быть номер 2» — Дэн Мильштейн</h3>
-    <p>Как стать лидером в конкурентной среде, не теряя свою индивидуальность.</p>
-  </article>
-
-  <article class="book-item">
-    <h3>«48 законов власти» — Роберт Грин</h3>
-    <p>Психология влияния и стратегии власти, основанные на реальных исторических примерах.</p>
-  </article>
-
-  <article class="book-item">
-    <h3>«21 неопровержимый закон лидерства» — Джон Максвелл</h3>
-    <p>Мировой бестселлер о принципах, которые делают лидеров по-настоящему великими.</p>
-  </article>
-
-  <article class="book-item">
-    <h3>«Атомные привычки» — Джеймс Клир</h3>
-    <p>Как маленькие привычки ежедневно формируют большие изменения в жизни.</p>
-  </article>
-
-  <article class="book-item">
-    <h3>«Гении и аутсайдеры» — Малкольм Гладуэлл</h3>
-    <p>Почему успех — это не только талант, но и стечение обстоятельств, труда и времени.</p>
-  </article>
-
-  <article class="book-item">
-    <h3>«Виртуозы общения» — Чарльз Дахигг</h3>
-    <p>О том, как создавать эффективные команды, принимать решения и общаться с пользой.</p>
-  </article>
-
-  <article class="book-item">
-    <h3>«Как разговаривать с мудаками» — Марк Гоулстон</h3>
-    <p>Практическое руководство по общению с токсичными людьми и сохранению самообладания.</p>
-  </article>
-
+  <!-- остальные книги оставляем как есть -->
 </section>
 
 <script>
-  const text = `Меня зовут Павел, мне 14 лет. Я активно развиваюсь в спорте и технологиях, уделяю внимание как физическому, так и ментальному росту. Занимаюсь боксом — работаю над выносливостью, дисциплиной и силой, поскольку верю, что спорт учит не только телу, но и характеру.
+const text = `Меня зовут Павел, мне 14 лет. За последние месяцы я проделал огромную работу и не сдавался ни на шаг. 
+Я активно развиваюсь в спорте — бокс помогает мне выстраивать дисциплину, силу и выносливость. 
+Я обожаю квадроциклы: Yamaha YFZ 450 стал символом упорства, свободы и адреналина. Каждый выезд, трюки и тренировки — это опыт, который делает меня сильнее. 
+Параллельно я создаю Telegram-ассистента PavelPA с голосовыми ответами, напоминаниями и генерацией изображений, изучая технологии и ИИ на практике. 
+Я уверен, что дисциплина, труд и страсть к развитию помогают достигать амбициозных целей и превращать мечты в реальность.`;
 
-Параллельно я увлечён программированием и создаю собственного Telegram-ассистента PavelPA с функциями голосовых ответов, напоминаний и генерации изображений. Этот проект помогает мне изучать современные технологии и искусственный интеллект на практике.
+const container = document.getElementById('wave-text');
+text.split('').forEach((char, i) => {
+  const span = document.createElement('span');
+  span.textContent = char;
+  span.style.animationDelay = `${i * 0.03}s`;
+  container.appendChild(span);
+});
 
-С детства я фанат техники и мечтал о квадроцикле Yamaha YFZ 450 — моей мечте уже более 10 лет, и совсем недавно она сбылась. Этот квадроцикл для меня не просто средство передвижения — это символ упорства и награда за труд.
+const btn = document.getElementById('toggle-books-btn');
+const booksList = document.getElementById('books-list');
 
-Мне интересно открывать новое, ставить амбициозные цели и постепенно превращать мечты в реальность. Я уверен, что именно сочетание дисциплины, технологий и страсти к развитию поможет мне добиться успеха в будущем.
-
-Подписывайтесь на мои соцсети, Спасибо.`;
-
-  const target = document.getElementById("typing-target");
-  let i = 0;
-
-  function typeLetter() {
-    if (i < text.length) {
-      target.textContent += text.charAt(i);
-      i++;
-      setTimeout(typeLetter, 18); // скорость печати (мс)
-    }
+btn.addEventListener('click', () => {
+  const isHidden = booksList.hasAttribute('hidden');
+  if (isHidden) {
+    booksList.removeAttribute('hidden');
+    btn.setAttribute('aria-expanded', 'true');
+    btn.textContent = 'Скрыть список книг';
+  } else {
+    booksList.setAttribute('hidden', '');
+    btn.setAttribute('aria-expanded', 'false');
+    btn.textContent = 'Книги, которые я прочитал и советую к прочтению';
   }
-
-  window.addEventListener("DOMContentLoaded", typeLetter);
-
-  const btn = document.getElementById('toggle-books-btn');
-  const booksList = document.getElementById('books-list');
-
-  btn.addEventListener('click', () => {
-    const isHidden = booksList.hasAttribute('hidden');
-    if (isHidden) {
-      booksList.removeAttribute('hidden');
-      btn.setAttribute('aria-expanded', 'true');
-      btn.textContent = 'Скрыть список книг';
-    } else {
-      booksList.setAttribute('hidden', '');
-      btn.setAttribute('aria-expanded', 'false');
-      btn.textContent = 'Книги, которые я прочитал и советую к прочтению';
-    }
-  });
+});
 </script>
 
 </body>
